cc_binary(
    name = "publisher",
    srcs = [
        "src/publisher.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":radar_object",
    ],
)

cc_library(
    name = "radar_object",
    hdrs = [
        "include/iceoryx/radar_object.hpp",
    ],
    includes = [
        "include/",
    ],
    visibility = ["//visibility:public"],
)